# mgdocker

./: Cargo.toml  readme.md
src/: args.rs  container.rs  image.rs  main.rs  model.rs  util.rs
src/components/: app.rs  container.rs  images.rs  index.rs  mod.rs
src/components/shared/: sse.rs
src/views/: app.rs  container.rs  index.rs  mod.rs
