[package]
name = "mgdocker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
async-stream = "0.3.5"
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
clap = { version = "4.5.1", features = ["derive"] }
futures = "0.3.30"
leptos = { version = "0.6.6", features = ["ssr", "tracing"] }
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["io-util"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
